# rss2bsky

./: .gitignore  README.md  pyproject.toml  settings.example.toml
rss2bsky/: __main__.py  main.py
